# research_management_tool

./: .env.example  .gitignore  ADBE Expected Return 12_4_25.xlsx  README.md  package-lock.json  package.json  watchlist.json
__tests__/: tasks-api.test.js
_archive/: portfolio.json  watchlist.json
_archive/data/: factor-config.json  sector-config.json
data/AMZN/: valuation_model.json
data/MA/: thesis.json  valuation_model.json
docs/: portfolio-allocation-vol-score-workflow.md
macro_regime_allocator/: .gitignore  Makefile  backtest.py  config.py  config.yaml  data.py  main.py  model.py  pyproject.toml  requirements.txt  results.py  validate.py
macro_regime_allocator/.next/: trace  trace-build
macro_regime_allocator/data/: features.csv  labeled_dataset.csv  merged_monthly.csv
macro_regime_allocator/outputs/: backtest_results.csv  investment_metrics.csv  model.joblib  report.md
macro_regime_allocator/outputs/validation/: ablation_studies.csv  bootstrap_confidence.csv  coefficient_stability.csv  parameter_sensitivity.csv  subperiod_analysis.csv  validation_report.md
mockups/: ascii-terminal.html  dark-editorial.html  dark-mode.html  editorial-minimal.html  editorial-newspaper.html  editorial-warm.html
scripts/: fetch_period_changes.py  fetch_quotes.py  generate_data.py  seed-supabase.mjs  supabase-schema.sql
src/: proxy.js
src/app/: globals.css  layout.js
src/components/: AccountingTool.jsx  AuthGate.jsx  DisableScrollOnNumberInputs.jsx  Navbar.jsx  RichTextArea.jsx  StatCard.jsx  Treemap.jsx  ValuationModel.jsx
src/lib/: AuthContext.jsx  (+13 more)
(+145 files in other folders)
